V12 рабочий но не быстрый вариант